--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
         <li>📍 Potchefstroom — 1 Silver Street, Silverwood Apartment Complex, Room 59</li>
         <li>📞 +27 747 315 841</li>
         <li>📧 michycsibz07@gmail.com</li>
+        <li>💼 <a href="https://www.linkedin.com/in/michel-sibanda-5b88952b9?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">LinkedIn Profile</a></li>
       </ul>
     </div>
 
